fix: Remove duplicate macOS Finder metadata entries in .gitignore

--- a/onlyfix/.gitignore
+++ b/onlyfix/.gitignore
@@ -27,5 +27,9 @@ yarn-error.log
 /.vscode
 /.zed
 
+# macOS Finder metadata
+.DS_Store
+**/.DS_Store
+
 # Ignore Swagger UI build artifacts
 /public/swagger-ui/
